# ImageHiding

./: .gitignore  CMakeLists.txt  README  README.md  bmpCommon.c  bmpCommon.h  bmpHide.c  bmpHide.h  bmpUnhide.c  bmpUnhide.h  common.c  common.h  commonHide.c  commonHide.h  commonUnhide.c  commonUnhide.h  compareImages.c  compareImages.h  encode.c  hide.c  hide.h  main  makefile  multiimage.txt  output.ppm  ppmCommon.c  ppmCommon.h  ppmHide.c  ppmHide.h  ppmUnhide.c  ppmUnhide.h  test.c  test.txt  test2.txt  test3.txt  testsuite  unhide.c  unhide.h
image_only_output/: 3042.pbm  cross.pbm
images/: 3042.pbm  3pixels.ppm  48pixels.ppm  6pixelsOneLineHeader.ppm  6pixelswhite.ppm  cross.pbm.save  cross2.pbm  cross3.ppm  doge.ppm  images.txt  incompleteimage.ppm  nopixelmap.ppm  pangolin-001.ppm  test.ppm
images_only/: 3042.pbm  dot2.pbm
multi_images/: 6pixel-001.ppm  output.ppm
multi_output/: output-000.ppm  output-001.ppm  output-002.ppm  output-003.ppm  output-004.ppm  output-005.ppm  output-006.ppm  output.ppm
output/: 3042.ppm  dot.ppm  output.ppm  pangolin-000.ppm
pangolin_images/: awesomepangolin.ppm
pangolin_output/: awesomepangolin.ppm  pangolin.ppm
test_text/: multiimage.txt
